# Algorithm

./: .gitignore  CMakeLists.txt
Acwing/base/: cube_root.cpp  number_range.cpp
Acwing/base/basical_algorithm/: AcWing801.cpp  difference.cpp  difference_matrix.cpp  high_accuracy_add.cpp  high_accuracy_div.cpp  high_accuracy_mul.cpp  high_accuracy_sub.cpp  if_son_string.cpp  inverse_pair.cpp  longest_consecutive_non-repeating_subsequence .cpp  merge_sort.cpp  prefix_sum.cpp  quick_sort.cpp  segments_merge.cpp  sum_of_interval.cpp  sum_of_submatrices.cpp  target_sum.cpp
Acwing/graduate/: AcWing18.cpp  AcWing3375.cpp
Acwing/graduate/1/: AcWing3373.cpp  AcWing3374.cpp  AcWing3376.cpp
Acwing/graduate/10/: AcWing840.cpp
Acwing/graduate/11/: AcWing785.cpp
Acwing/graduate/2/: AcWing3573.cpp  AcWing3607.cpp
Acwing/graduate/3/: AcWing3302.cpp  AcWing3302_SuffixExpression.cpp
Acwing/graduate/4/: AcWing3766.cpp
Acwing/graduate/5/: AcWing3765.cpp  AcWing3786.cpp
Acwing/graduate/6/: AcWing148.cpp  AcWing149.cpp
Acwing/graduate/7/: AcWing848.cpp  AcWing848_dfs.cpp
Acwing/graduate/8/: AcWing849.cpp  AcWing854.cpp  AcWing858.cpp
