cmake_minimum_required(VERSION 3.24)
#指定cmake工程名
project(algorithm)

#c++版本
set(CMAKE_CXX_STANDARD 14)
# 指定可执行程序输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

add_executable(AcWing3375 Acwing/graduate/1/AcWing3375.cpp)
add_executable(AcWing3376 Acwing/graduate/1/AcWing3376.cpp)
add_executable(AcWing3373 Acwing/graduate/1/AcWing3373.cpp)
add_executable(AcWing3374 Acwing/graduate/1/AcWing3374.cpp)
add_executable(AcWing3607 Acwing/graduate/2/AcWing3607.cpp)
add_executable(AcWing3573 Acwing/graduate/2/AcWing3573.cpp)
add_executable(AcWing3302 Acwing/graduate/3/AcWing3302.cpp)
add_executable(AcWing3302_SuffixExpression Acwing/graduate/3/AcWing3302_SuffixExpression.cpp)
add_executable(AcWing18 Acwing/graduate/4/AcWing18.cpp)
add_executable(AcWing3766 Acwing/graduate/4/AcWing3766.cpp)
add_executable(AcWing3786 Acwing/graduate/5/AcWing3786.cpp)
add_executable(AcWing3765 Acwing/graduate/5/AcWing3765.cpp)
add_executable(AcWing148 Acwing/graduate/6/AcWing148.cpp)
add_executable(AcWing149 Acwing/graduate/6/AcWing149.cpp)
add_executable(AcWing848 Acwing/graduate/7/AcWing848.cpp)
add_executable(AcWing848_dfs Acwing/graduate/7/AcWing848_dfs.cpp)
add_executable(AcWing858 Acwing/graduate/8/AcWing858.cpp)
add_executable(AcWing849 Acwing/graduate/8/AcWing849.cpp)
add_executable(AcWing854 Acwing/graduate/8/AcWing854.cpp)
add_executable(AcWing840 Acwing/graduate/10/AcWing840.cpp)
add_executable(AcWing785 Acwing/graduate/11/AcWing785.cpp)
add_executable(quick_sort Acwing/base/basical_algorithm/quick_sort.cpp)
add_executable(merge_sort Acwing/base/basical_algorithm/merge_sort.cpp)
add_executable(number_range Acwing/base/basical_algorithm/number_range.cpp)
add_executable(cube_root Acwing/base/basical_algorithm/cube_root.cpp)
add_executable(inverse_pair Acwing/base/basical_algorithm/inverse_pair.cpp)
add_executable(high_accuracy_add Acwing/base/basical_algorithm/high_accuracy_add.cpp)
add_executable(high_accuracy_sub Acwing/base/basical_algorithm/high_accuracy_sub.cpp)
add_executable(high_accuracy_mul Acwing/base/basical_algorithm/high_accuracy_mul.cpp)